# itsc2025activity

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
itsc2025workshop/: assets.py  definitions.py
itsc2025workshop/datasets/: answer key.txt  superstore.csv  superstore_activity_dataset.csv  superstore_prep.csv
