[project]
name = "itsc2025workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver>=1.9.11",
    "duckdb>=1.2.0",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "itsc2025workshop.definitions"
project_name = "itsc2025workshop"

[tool.setuptools.packages.find]
exclude=["itsc2025workshop_tests"]
